Closed Bug 773839 Opened 14 years ago Closed 14 years ago

Fix build warnings under accessible/

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: dzbarsky, Assigned: dzbarsky)

Details

Attachments

(1 file)

No description provided.
Attached patch PatchSplinter Review
Attachment #642114 - Flags: review?(trev.saunders)
Comment on attachment 642114 [details] [diff] [review] Patch > PRInt32 columnExtent = 0; > >- nsresult rv = tableLayout-> >+ mozilla::DebugOnly<nsresult> rv = tableLayout-> nit, add using namespace mozilla, and get rid of the mozilla::s > GetCellDataAt(aRowIdx, aColIdx, *getter_AddRefs(domElement), > startRowIndex, startColIndex, rowSpan, colSpan, > actualRowSpan, columnExtent, isSelected); > >+ NS_ASSERTION(NS_SUCCEEDED(rv), "Could not get cell data"); > return columnExtent; nit, I'd put the blank line after the assert. >- nsresult rv = tableLayout-> >+ mozilla::DebugOnly<nsresult> rv = tableLayout-> > GetCellDataAt(aRowIdx, aColIdx, *getter_AddRefs(domElement), > startRowIndex, startColIndex, rowSpan, colSpan, > rowExtent, actualColSpan, isSelected); > >+ NS_ASSERTION(NS_SUCCEEDED(rv), "Could not get cell data"); > return rowExtent; same here r=me with that
Attachment #642114 - Flags: review?(trev.saunders) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: