[Bug 773839] Fix build warnings under accessible/ r=tbsaunde